xx/xx/2010 - MythBox 1.0.1
-----------------------------
  New
    - Issue 132 - Support for MythTV 0.24 (thx mitch capper)
    - TVRage season and episode matching now uses the program's subtitle when the original air date search fails
  
  Fixed
    - Issue 136 - mythbox.log moved to standard log dir on Mac OSX
    - TVRage metadata with missing seasons caused lookup failures 
    - Resuming from last position now works for ad-hoc recordings
    - Thumbnail generation for 0.24 backends fixed
    
11/25/2010 - MythBox 1.0.0
-----------------------------
  New
    - Issue 125 - Added Frech translations (thanks ddekani)
    - TVRage metadata caching for Season & Episode
    - FFMpeg binary for Mac and Windows unbundled from installation zip and also removed from Settings screen. Now downloads on demand.
    - New icon (tnx freezy)
    - Added to XBMC addon repo for easy updates
   
  Fixed
    - Issue 124 - Fixed parsing another variation of ffmpeg output
    - Issue 130 - Unable to play a recording when the cache lookup for a thumbnail fails
    - Issue 131 - Hours in timestamps are not displayed correctly on Macs
    - Comm skips on HDPVR 1080i recordings incorrect because ffmpeg reports incorrect framerate  

10/11/2010 - MythBox RC2
-----------------------------
  New  
    - Added Sort feature to the Upcoming Recordings screen
    - Issue 93 - Added splash screen
    - FFmpeg output is cached for framerate extraction used by comm flagging
    - Added 'Enable Aggressive Caching' to Settings->MythTV to pre-cache framerate and commercial break info
    - Added Season and Episode to the Recording Details screen when available
    - Added TVRage as a provider of TV show metadata (used for season & episode)
    - Commercial breaks are only skipped once during playback (restarting playback in 'Play' only mode is no longer necessary if the comm break info is incorrect)