@@ -1,11 +1,12 @@
 xx/xx/2010 - MythBox 1.0.1
 -----------------------------
   New
-    - Issue 132 - Support for MythTV 0.24 (thx mitch capper)
+    - Issue 132 - Support for MythTV 0.24 except for LiveTV (thx mitch capper)
     - TVRage season and episode matching now uses the program's subtitle when the original air date search fails
   
   Fixed
     - Issue 136 - mythbox.log moved to standard log dir on Mac OSX
+    - Issue 142 - settings.xml parsing failed when removing mythboxfeed
     - TVRage metadata with missing seasons caused lookup failures 
     - Resuming from last position now works for ad-hoc recordings
     - Thumbnail generation for 0.24 backends fixed
